added experimental single headed tools (disabled by default)

--- a/src/main/resources/assets/tetra/lang/en_us.json
+++ b/src/main/resources/assets/tetra/lang/en_us.json
@@ -51,6 +51,9 @@
   "stats.tier_suffix": "tier",
   "stats.level_suffix": "level",
 
+  "stats.reach": "Reach",
+  "stats.reach.tooltip": "This item can hit blocks & entities up to §e%s§r blocks away",
+
   "stats.durability": "Durability",
   "stats.durability.tooltip": "This item has §e%s§r durability",
 
@@ -1769,6 +1772,256 @@
   "sickle/knightmetal": "Knightmetal sickle",
   "sickle/knightmetal.prefix": "Knightmetal",
 
+  "single/head": "Head",
+  "single/handle": "Handle",
+  "single/binding": "Binding",
+
+  "tetra/schema/single/handle/basic_handle.name": "Basic handle",
+  "tetra/schema/single/handle/basic_handle.description": "Replace the handle a basic handle crafted from the given materials. A sturdier handle supports heavier and more advanced tool heads.",
+  "tetra/schema/single/handle/basic_handle.slot1": "Handle material",
+
+  "single/basic_handle.name": "Basic handle",
+  "single/basic_handle.description": "A basic handle. Handles are the primary source of integrity.",
+
+  "tetra/schema/single/handle/light_handle.name": "Light handle",
+  "tetra/schema/single/handle/light_handle.description": "Replace the handle with a lighter handle that allows the item to be thrown, but it provides less durability than other handles.",
+  "tetra/schema/single/handle/light_handle.slot1": "Handle material",
+
+  "single/light_handle.name": "Light handle",
+  "single/light_handle.description": "A lighter handle that provides less durability but allows the item to be thrown. Handles are the primary source of integrity.",
+
+  "light_handle/stick": "Flimsy light handle",
+  "light_handle/bone": "Light bone handle",
+  "light_handle/iron": "Light iron handle",
+  "light_handle/blaze_rod": "Light blazing handle",
+  "light_handle/end_rod": "Light end rod",
+  "light_handle/oak": "Light wooden handle",
+  "light_handle/spruce": "Light spruce handle",
+  "light_handle/birch": "Light birch handle",
+  "light_handle/jungle": "Light jungle wood handle",
+  "light_handle/acacia": "Light acacia handle",
+  "light_handle/dark_oak": "Light dark oak handle",
+  "light_handle/maple": "Light maple handle",
+  "light_handle/cherry": "Light cherry wood handle",
+  "light_handle/baobab": "Light baobab handle",
+  "light_handle/bronze": "Light bronze handle",
+  "light_handle/steel": "Light steel handle",
+  "light_handle/greatwood": "Light greatwood handle",
+  "light_handle/treated_wood": "Light treated wooden handle",
+  "light_handle/ironwood": "Light ironwood handle",
+  "light_handle/forged_beam": "Light ancient handle",
+  "light_handle/prismarine": "Prismarine handle",
+
+  "tetra/schema/single/handle/long_handle.name": "Long handle",
+  "tetra/schema/single/handle/long_handle.description": "Replace the handle with a lighter handle that allows the item to be thrown, but it provides less durability than other handles.",
+  "tetra/schema/single/handle/long_handle.slot1": "Handle material",
+
+  "single/long_handle.name": "Long handle",
+  "single/long_handle.description": "A longer handle that yields longer reach. Handles are the primary source of integrity.",
+
+  "long_handle/stick": "Flimsy long handle",
+  "long_handle/bone": "Long bone handle",
+  "long_handle/iron": "Long iron handle",
+  "long_handle/blaze_rod": "Long blazing handle",
+  "long_handle/end_rod": "Long end rod",
+  "long_handle/oak": "Long wooden handle",
+  "long_handle/spruce": "Long spruce handle",
+  "long_handle/birch": "Long birch handle",
+  "long_handle/jungle": "Long jungle wood handle",
+  "long_handle/acacia": "Long acacia handle",
+  "long_handle/dark_oak": "Long dark oak handle",
+  "long_handle/maple": "Long maple handle",
+  "long_handle/cherry": "Long cherry wood handle",
+  "long_handle/baobab": "Long baobab handle",
+  "long_handle/bronze": "Long bronze handle",
+  "long_handle/steel": "Long steel handle",
+  "long_handle/greatwood": "Long greatwood handle",
+  "long_handle/treated_wood": "Long treated wooden handle",
+  "long_handle/ironwood": "Long ironwood handle",
+  "long_handle/forged_beam": "Long ancient handle",
+
+  "single_handle/blazing.name": "Blazing",
+  "single_handle/blazing.description": "Using this may set you on fire, more sever in hot environments.",
+
+  "single_handle/ender_reverb.name": "Ender reverb",
+  "single_handle/ender_reverb.description": "Reacts negatively with nearby entities originating from the end.",
+
+  "single_handle/wrap_string.name": "String wrap",
+  "single_handle/wrap_string.description": "Slightly increases damage and speed, reduces negative handle effects.",
+  "single_handle/wrap_leather.name": "Leather wrap",
+  "single_handle/wrap_leather.description": "Slightly increases damage and speed, reduces negative handle effects.",
+  "single_handle/wrap_hide.name": "Hide wrap",
+  "single_handle/wrap_hide.description": "Slightly increases damage and speed, reduces negative handle effects.",
+  "single_handle/wrap_vine.name": "Vine wrap",
+  "single_handle/wrap_vine.description": "Slightly increases damage and speed, reduces negative handle effects.",
+
+  "tetra/schema/single/handle/wrap_handle.name": "Wrap handle",
+  "tetra/schema/single/handle/wrap_handle.slot1": "Material",
+  "tetra/schema/single/handle/wrap_handle.description": "Wrap the handle using the provided materials. Slighly increases damage and speed, and reduces negative effects potentially caused by the handle.",
+
+  "tetra/schema/single/handle/wrap_handle_hone_1.name": "Hone: Wrap II",
+  "tetra/schema/single/handle/wrap_handle_hone_1.slot1": "Material",
+  "tetra/schema/single/handle/wrap_handle_hone_1.description": "Improve the handle wrap, further increasing damage and speed, and reducing negative effects.",
+
+  "tetra/schema/single/handle/wrap_handle_hone_2.name": "Hone: Wrap III",
+  "tetra/schema/single/handle/wrap_handle_hone_2.slot1": "Material",
+  "tetra/schema/single/handle/wrap_handle_hone_2.description": "Further improve the handle wrap, increasing damage and speed, and reducing negative effects.",
+
+  "tetra/schema/single/handle/hone_speed_1.name": "Hone: Speed I",
+  "tetra/schema/single/handle/hone_speed_1.description": "Hone the handle to increase the overall swing speed by 4%%.",
+  "tetra/schema/single/handle/hone_speed_2.name": "Hone: Speed II",
+  "tetra/schema/single/handle/hone_speed_2.description": "Further hone the swing speed improvement for this module, increasing the speed bonus from 4%% to 9%%.",
+  "tetra/schema/single/handle/hone_speed_3.name": "Hone: Speed III",
+  "tetra/schema/single/handle/hone_speed_3.description": "Further hone the swing speed improvement for this module, increasing the speed bonus from 9%% to 13%%.",
+  "tetra/schema/single/handle/hone_speed_4.name": "Hone: Speed IV",
+  "tetra/schema/single/handle/hone_speed_4.description": "Further hone the swing speed improvement for this module, increasing the speed bonus from 13%% to 18%%.",
+  "tetra/schema/single/handle/hone_speed_5.name": "Hone: Speed V",
+  "tetra/schema/single/handle/hone_speed_5.description": "Further hone the swing speed improvement for this module, increasing the speed bonus from 18%% to 22%%.",
+
+  "tetra/schema/single/socket.name": "Socket",
+  "tetra/schema/single/socket.description": "Attach a gem where the head meets the handle. Different gems provide different effects.",
+  "tetra/schema/single/socket.slot1": "Gem",
+
+  "single/socket.name": "Socket",
+  "single/socket.description": "A gem, attached where the head meets the handle. The gem is enchanted and provides magical boons to the wielder.",
+
+  "single_socket/diamond": "Socket [§bDiamond§r]",
+  "single_socket/emerald": "Socket [§aEmerald§r]",
+  "single_socket/lapis": "Socket [§9Lapis§r]",
+  "single_socket/amber": "Socket [§6Amber§r]",
+  "single_socket/pristine_diamond": "Socket [§bDiamond+§r]",
+  "single_socket/pristine_diamond.description": "A gem, attached where the head meets the handle. The gem is enchanted and provides magical boons to the wielder.\n\nThe gem is of pristine quality and provides increased effects.",
+
+  "single_socket/pristine_emerald": "Socket [§aEmerald+§r]",
+  "single_socket/pristine_emerald.description": "A gem, attached where the head meets the handle. The gem is enchanted and provides magical boons to the wielder.\n\nThe gem is of pristine quality and provides increased effects.",
+
+  "single_socket/pristine_lapis": "Socket [§9Lapis+§r]",
+  "single_socket/pristine_lapis.description": "A gem, attached where the head meets the handle. The gem is enchanted and provides magical boons to the wielder.\n\nThe gem is of pristine quality and provides increased effects.",
+
+  "tetra/schema/single/binding.name": "Binding",
+  "tetra/schema/single/binding.description": "Bind the tool head to the handle by binding it with rope or straps, or by using completely different materials and methods.",
+  "tetra/schema/single/binding.slot1": "Material",
+
+  "single/binding.name": "Binding",
+
+  "single_binding/string": "String binding",
+  "single_binding/string.description": "Tightly bound strings strengthen the tool head's attachment to the handle.",
+  "single_binding/leather": "Leather binding",
+  "single_binding/leather.description": "Tightly bound leather straps strengthen the tool head's attachment to the handle.",
+  "single_binding/hide": "Hide binding",
+  "single_binding/hide.description": "Tightly bound hide straps strengthen the tool head's attachment to the handle.",
+  "single_binding/prismarine": "Prismarine binding",
+  "single_binding/prismarine.description": "A chunk of prismarine seemingly fuse the head onto handle.",
+  "single_binding/vine": "Vine binding",
+  "single_binding/vine.description": "Tightly bound vine straps strengthen the tool head's attachment to the handle.",
+  "single_binding/bolt": "Bolted",
+  "single_binding/bolt.description": "An adjustable bolt attaches the tool head to the handle.",
+
+  "single_tweak/binding_bolt.label": "Bolt tightness",
+  "single_tweak/binding_bolt.tooltip": "§eTighten§r the bolt to make the tool more rigid, increasing gathering efficiency.\n§eLoosen§r the bolt to allow for a softer rebound, effectively increasing durability.",
+  "single_tweak/binding_bolt.left": "Loose",
+  "single_tweak/binding_bolt.right": "Tight",
+
+  "tetra/schema/single/basic_shovel/basic_shovel.name": "Shovel head",
+  "tetra/schema/single/basic_shovel/basic_shovel.description": "Forge an axe head from the given material. The shovel can primarily be used to dig into the earth, but it's also useful for make dirt paths.",
+  "tetra/schema/single/basic_shovel/basic_shovel.slot1": "Head material",
+
+  "single/basic_shovel.item_name": "Shovel",
+  "single/basic_shovel.name": "Shovel head",
+  "single/basic_shovel.description": "A basic shovel head that can primarily be used to dig into the earth, but it's also useful for make dirt paths.",
+
+  "basic_shovel/oak": "Wooden shovel",
+  "basic_shovel/oak.prefix": "Wooden",
+  "basic_shovel/cobblestone": "Stone shovel",
+  "basic_shovel/cobblestone.prefix": "Cobblestone",
+  "basic_shovel/flint": "Flint shovel",
+  "basic_shovel/flint.prefix": "Flint",
+  "basic_shovel/iron": "Iron shovel",
+  "basic_shovel/iron.prefix": "Iron",
+  "basic_shovel/diamond": "Diamond shovel",
+  "basic_shovel/diamond.prefix": "Diamond",
+  "basic_shovel/gold": "Gold shovel",
+  "basic_shovel/gold.prefix": "Gold",
+  "basic_shovel/copper": "Copper shovel",
+  "basic_shovel/copper.prefix": "Copper",
+  "basic_shovel/tin": "Tin shovel",
+  "basic_shovel/tin.prefix": "Tin",
+  "basic_shovel/silver": "Silver shovel",
+  "basic_shovel/silver.prefix": "Silver",
+  "basic_shovel/nickel": "Nickel shovel",
+  "basic_shovel/nickel.prefix": "Nickel",
+  "basic_shovel/lead": "Lead shovel",
+  "basic_shovel/lead.prefix": "Lead",
+  "basic_shovel/bronze": "Bronze shovel",
+  "basic_shovel/bronze.prefix": "Bronze",
+  "basic_shovel/electrum": "Electrum shovel",
+  "basic_shovel/electrum.prefix": "Electrum",
+  "basic_shovel/steel": "Steel shovel",
+  "basic_shovel/steel.prefix": "Steel",
+  "basic_shovel/thaumium": "Thaumium shovel",
+  "basic_shovel/thaumium.prefix": "Thaumium",
+  "basic_shovel/ironwood": "Ironwood shovel",
+  "basic_shovel/ironwood.prefix": "Ironwood",
+  "basic_shovel/steeleaf": "Steeleaf shovel",
+  "basic_shovel/steeleaf.prefix": "Steeleaf",
+  "basic_shovel/fierymetal": "Fiery shovel",
+  "basic_shovel/fierymetal.prefix": "Fiery",
+  "basic_shovel/knightmetal": "Knightmetal shovel",
+  "basic_shovel/knightmetal.prefix": "Knightmetal",
+
+
+  "tetra/schema/single/spearhead/spearhead.name": "Spearhead",
+  "tetra/schema/single/spearhead/spearhead.description": "Craft a spearhead from the given material, which can typically be used to cause damage to others.",
+  "tetra/schema/single/spearhead/spearhead.slot1": "Head material",
+
+  "single/spearhead.item_name": "Spear",
+  "single/spearhead.name": "Spearhead",
+  "single/spearhead.description": "A basic spearhead which can be used to cause damage to others.",
+
+  "spearhead/oak": "Wooden spearhead",
+  "spearhead/oak.prefix": "Wooden",
+  "spearhead/cobblestone": "Stone spearhead",
+  "spearhead/cobblestone.prefix": "Cobblestone",
+  "spearhead/flint": "Flint spearhead",
+  "spearhead/flint.prefix": "Flint",
+  "spearhead/iron": "Iron spearhead",
+  "spearhead/iron.prefix": "Iron",
+  "spearhead/diamond": "Diamond spearhead",
+  "spearhead/diamond.prefix": "Diamond",
+  "spearhead/gold": "Gold spearhead",
+  "spearhead/gold.prefix": "Gold",
+  "spearhead/copper": "Copper spearhead",
+  "spearhead/copper.prefix": "Copper",
+  "spearhead/tin": "Tin spearhead",
+  "spearhead/tin.prefix": "Tin",
+  "spearhead/silver": "Silver spearhead",
+  "spearhead/silver.prefix": "Silver",
+  "spearhead/nickel": "Nickel spearhead",
+  "spearhead/nickel.prefix": "Nickel",
+  "spearhead/lead": "Lead spearhead",
+  "spearhead/lead.prefix": "Lead",
+  "spearhead/bronze": "Bronze spearhead",
+  "spearhead/bronze.prefix": "Bronze",
+  "spearhead/electrum": "Electrum spearhead",
+  "spearhead/electrum.prefix": "Electrum",
+  "spearhead/steel": "Steel spearhead",
+  "spearhead/steel.prefix": "Steel",
+  "spearhead/thaumium": "Thaumium spearhead",
+  "spearhead/thaumium.prefix": "Thaumium",
+  "spearhead/ironwood": "Ironwood spearhead",
+  "spearhead/ironwood.prefix": "Ironwood",
+  "spearhead/steeleaf": "Steeleaf spearhead",
+  "spearhead/steeleaf.prefix": "Steeleaf",
+  "spearhead/fierymetal": "Fiery spearhead",
+  "spearhead/fierymetal.prefix": "Fiery",
+  "spearhead/knightmetal": "Knightmetal spearhead",
+  "spearhead/knightmetal.prefix": "Knightmetal",
+
+
+  "single/trident.item_name": "Trident",
+  "single/trident.name": "Trident",
+  "single/trident.description": "A trident head. The knowledge of how one is made has been lost to time",
+  "trident/trident": "Trident",
 
   "toolbelt/slot1": "",
   "toolbelt/slot2": "",
