fixed diamond shortblade not being craftable, fixes #116

--- a/src/main/resources/assets/tetra/lang/en_us.json
+++ b/src/main/resources/assets/tetra/lang/en_us.json
@@ -990,6 +990,8 @@
   "short_blade/gold": "Golden shortblade",
   "short_blade/gold.prefix": "Golden",
   "short_blade/gold.name": "Dagger",
+  "short_blade/diamond": "Diamond shortblade",
+  "short_blade/diamond.prefix": "Diamond",
   "short_blade/prismarine": "Prismarine shortblade",
   "short_blade/prismarine.prefix": "Prismarine",
   "short_blade/prismarine.name": "Shanker",
