added missing textures & localizations for spearheads

--- a/src/main/resources/assets/tetra/lang/en_us.json
+++ b/src/main/resources/assets/tetra/lang/en_us.json
@@ -1982,16 +1982,36 @@
 
   "spearhead/oak": "Wooden spearhead",
   "spearhead/oak.prefix": "Wooden",
+  "spearhead/spruce": "Spruce spearhead",
+  "spearhead/spruce.prefix": "Spruce",
+  "spearhead/birch": "Birch spearhead",
+  "spearhead/birch.prefix": "Birch",
+  "spearhead/jungle": "Jungle spearhead",
+  "spearhead/jungle.prefix": "Jungle",
+  "spearhead/acacia": "Acacia spearhead",
+  "spearhead/acacia.prefix": "Acacia",
+  "spearhead/dark_oak": "Dark_oak spearhead",
+  "spearhead/dark_oak.prefix": "Dark_oak",
   "spearhead/cobblestone": "Stone spearhead",
-  "spearhead/cobblestone.prefix": "Cobblestone",
+  "spearhead/cobblestone.prefix": "Stone",
+  "spearhead/stone": "Stone spearhead",
+  "spearhead/stone.prefix": "Stone",
+  "spearhead/granite": "Granite spearhead",
+  "spearhead/granite.prefix": "Granite",
+  "spearhead/diorite": "Diorite spearhead",
+  "spearhead/diorite.prefix": "Diorite",
+  "spearhead/andesite": "Andesite spearhead",
+  "spearhead/andesite.prefix": "Andesite",
   "spearhead/flint": "Flint spearhead",
   "spearhead/flint.prefix": "Flint",
   "spearhead/iron": "Iron spearhead",
   "spearhead/iron.prefix": "Iron",
-  "spearhead/diamond": "Diamond spearhead",
-  "spearhead/diamond.prefix": "Diamond",
   "spearhead/gold": "Gold spearhead",
   "spearhead/gold.prefix": "Gold",
+  "spearhead/diamond": "Diamond spearhead",
+  "spearhead/diamond.prefix": "Diamond",
+  "spearhead/obsidian": "Obsidian spearhead",
+  "spearhead/obsidian.prefix": "Obsidian",
   "spearhead/copper": "Copper spearhead",
   "spearhead/copper.prefix": "Copper",
   "spearhead/tin": "Tin spearhead",
@@ -2008,17 +2028,6 @@
   "spearhead/electrum.prefix": "Electrum",
   "spearhead/steel": "Steel spearhead",
   "spearhead/steel.prefix": "Steel",
-  "spearhead/thaumium": "Thaumium spearhead",
-  "spearhead/thaumium.prefix": "Thaumium",
-  "spearhead/ironwood": "Ironwood spearhead",
-  "spearhead/ironwood.prefix": "Ironwood",
-  "spearhead/steeleaf": "Steeleaf spearhead",
-  "spearhead/steeleaf.prefix": "Steeleaf",
-  "spearhead/fierymetal": "Fiery spearhead",
-  "spearhead/fierymetal.prefix": "Fiery",
-  "spearhead/knightmetal": "Knightmetal spearhead",
-  "spearhead/knightmetal.prefix": "Knightmetal",
-
 
   "single/trident.item_name": "Trident",
   "single/trident.name": "Trident",
