added support for loyalty, riptide, impaling & channeling enchantments

--- a/src/main/resources/assets/tetra/lang/en_us.json
+++ b/src/main/resources/assets/tetra/lang/en_us.json
@@ -329,7 +329,7 @@
   "enchantment/sweeping.name": "Sweeping Edge",
   "enchantment/sweeping.description": "Makes sweeping strikes more effective",
   "enchantment/efficiency.name": "Efficiency",
-  "enchantment/efficiency.description": "Improves efficiency",
+  "enchantment/efficiency.description": "Improves gathering efficiency",
   "enchantment/fortune.name": "Fortune",
   "enchantment/fortune.description": "Increases drops when breaking things",
   "enchantment/silk_touch.name": "Silk Touch",
@@ -342,6 +342,14 @@
   "enchantment/punch.description": "Knock back targets further",
   "enchantment/infinity.name": "Infinity",
   "enchantment/infinity.description": "firing no longer consumes ammunition",
+  "enchantment/loyalty.name": "Loyalty",
+  "enchantment/loyalty.description": "Returns shortly after being thrown",
+  "enchantment/riptide.name": "riptide",
+  "enchantment/riptide.description": "Propels the wielder forward when used in water or rain",
+  "enchantment/impaling.name": "Impaling",
+  "enchantment/impaling.description": "Deal increased damage to wet or aquatic entities",
+  "enchantment/channeling.name": "Channeling",
+  "enchantment/channeling.description": "Calls down lightning when thrown at an entity during a thunderstorm",
 
   "destabilized/haunted.name": "§5Destabilized: Haunted",
   "destabilized/haunted.description": "This module has been haunted and will sometimes turn against the item's wielder! Will disappear over time.",
