--- a/src/main/resources/assets/tetra/lang/en_us.json
+++ b/src/main/resources/assets/tetra/lang/en_us.json
@@ -261,6 +261,13 @@
   "item.tetra.vent_plate.description": "Re-attach this to machinery to slightly increase its efficiency",
   "salvage_vent_plate_action.label": "Salvage",
 
+  "item.tetra.stonecutter": "Stonecutter",
+  "salvage_stonecutter_action.label": "Salvage",
+
+  "item.tetra.earthpiercer": "Earthpiercer",
+  "salvage_earthpiercer_action.label": "Salvage",
+
+  "item.tetra.forged_unsettling": "Slight vibrations cause unsettling reverberation within anything it touches",
   "item.tetra.forged_description": "Found in structures deep underground in snowy biomes",
 
   "item.tetra.tooltip_reveal": "Reveals related upgrade schemas while in the inventory",
@@ -1195,6 +1202,15 @@
   "machete/fierymetal.prefix": "Fiery",
   "machete/knightmetal": "Knightmetal machete",
   "machete/knightmetal.prefix": "Knightmetal",
+
+  "tetra/schema/sword/stonecutter.name": "Stonecutter",
+  "tetra/schema/sword/stonecutter.description": "Replace the current blade with the stonecutter, a heavy blade that cuts through stone with ease.",
+  "tetra/schema/sword/stonecutter.slot1": "Stonecutter",
+
+  "sword/stonecutter.item_name": "Stonecutter",
+  "sword/stonecutter.name": "Stonecutter",
+  "sword/stonecutter.description": "A heavy blade that cuts through stone with ease.",
+  "stonecutter/stonecutter": "Stonecutter",
 
   "tetra/schema/duplex/shared_head/hone_durability_1.name": "Hone: Durability I",
   "tetra/schema/duplex/shared_head/hone_durability_1.description": "Hone the module to increase the durability it provides by 4%%.",
