improved holosphere, added single headed tools

--- a/src/main/resources/assets/tetra/lang/en_us.json
+++ b/src/main/resources/assets/tetra/lang/en_us.json
@@ -5,10 +5,11 @@
   "item.tetra.journal.tooltip1": "At a touch the sphere projects diagrams and glyphs onto nothingness",
   "item.tetra.journal.tooltip2": "§8[§7right click§8] §7use",
   "journal.craft.breadcrumb.root": "Items",
-  "journal.craft.sword": "Blades",
-  "journal.craft.toolbelt": "Toolbelts",
-  "journal.craft.tool": "Tools",
-  "journal.craft.bow": "Bows",
+  "journal.craft.sword_modular": "Blades",
+  "journal.craft.toolbelt_modular": "Toolbelts",
+  "journal.craft.duplex_tool_modular": "Double headed tools",
+  "journal.craft.modular_single": "Single headed tools",
+  "journal.craft.modular_bow": "Bows",
   "journal.craft.slot": "Slot",
   "journal.craft.requirements": "Requirements",
   "journal.craft.improvements": "Improvements",
